--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-45.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-45.htm
@@ -1,1 +1,75 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Creating linked resources</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Creating linked resources</H1><p>Folders and files that are direct children of projects can be linked to locations in the file systemoutside of the project's location.  These special folders and files are called <a href="../concepts/concepts-13.htm">linked resources</a>.</p><P>To create a linked folder:</P><ol>  <li>In the Navigator view, right-click the project     where you want to create the new folder.</li>  <li>From the pop-up menu, select <b>New &gt; Folder</b>.</li>  <li>Specify the name of the folder as it will appear in the workbench.  This   name can be different from the name of the folder in the file system.</li>  <li>Click <b>Advanced</b>.</li>  <li>Check <b>Link to folder in the file system</b>.</li>  <li>Enter a file system path, or click <b>Browse</b> to select a folder in the file system.</li>  <li>Click <b>Finish</b>.</li></ol><P>To create a linked file, follow the same steps as above, except choose <b>New &gt; File</b> instead of <b>New &gt; Folder</b> in the Navigator'scontext menu.</P><P>Linked resource locations can also be specified relative to a variable.  This makesit easier to share projects containing linked resources with other team members,since it avoids hard-coded absolute file system paths that may vary from onemachine to the next.</P><P>To define a linked resource relative to a path variable, do the following after step 5above:</P><ol start="6">  <li>Click the <b>Variables</b> button.</li>  <li>In the resulting dialog, select an existing path variable or create a new one.</li>  <li>If the chosen variable defines the exact path of the linked resource, click <b>OK</b>.  Otherwise, click <b>Extend</b> to specify a file or folder below the location described  by the path variable, then click <b>OK</b>.</li>  <li>Click <b>Finish</b>.</li></ol></P><p><em>Tip:</em> The <b>Window &gt; Preferences &gt; Workbench &gt; Linked Resources </b> preference page also allows you to define path variables.</p><P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-12.htm">Resources</a><br><a href="../concepts/concepts-17.htm">Resource hierarchies</a><br><a href="../concepts/concepts-13.htm">Linked resources</a></P><P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-42.htm">Creating a project</a><br><a href="tasks-44.htm">Creating a file</a><br><a href="tasks-43.htm">Creating a folder</a><br></P><P>&nbsp;<br><a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a></P></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Creating linked resources</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Creating linked resources</H1>
+<p>
+Folders and files that are direct children of projects can be linked to locations in the file system
+outside of the project's location.  These special folders and files are called 
+<a href="../concepts/concepts-13.htm">linked resources</a>.
+</p>
+
+<P>To create a linked folder:
+</P>
+
+<ol>
+  <li>In the Navigator view, right-click the project 
+    where you want to create the new folder.</li>
+  <li>From the pop-up menu, select <b>New &gt; Folder</b>.</li>
+  <li>Specify the name of the folder as it will appear in the workbench.  This 
+  name can be different from the name of the folder in the file system.</li>
+  <li>Click <b>Advanced</b>.</li>
+  <li>Check <b>Link to folder in the file system</b>.</li>
+  <li>Enter a file system path, or click <b>Browse</b> to select a folder in the file system.</li>
+  <li>Click <b>Finish</b>.</li>
+</ol>
+
+<P>To create a linked file, follow the same steps as above, except choose 
+<b>New &gt; File</b> instead of <b>New &gt; Folder</b> in the Navigator's
+context menu.
+</P>
+<P>Linked resource locations can also be specified relative to a variable.  This makes
+it easier to share projects containing linked resources with other team members,
+since it avoids hard-coded absolute file system paths that may vary from one
+machine to the next.
+</P>
+<P>
+To define a linked resource relative to a path variable, do the following after step 5
+above:
+</P>
+<ol start="6">
+  <li>Click the <b>Variables</b> button.</li>
+  <li>In the resulting dialog, select an existing path variable or create a new one.</li>
+  <li>If the chosen variable defines the exact path of the linked resource, click <b>OK</b>.
+  Otherwise, click <b>Extend</b> to specify a file or folder below the location described
+  by the path variable, then click <b>OK</b>.</li>
+  <li>Click <b>Finish</b>.</li>
+</ol>
+</P>
+<p><em>Tip:</em> The <b>Window &gt; Preferences &gt; Workbench &gt; Linked Resources 
+</b> preference page also allows you to define path variables.
+</p>
+
+<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-12.htm">Resources</a><br>
+<a href="../concepts/concepts-17.htm">Resource hierarchies</a><br>
+<a href="../concepts/concepts-13.htm">Linked resources</a>
+</P>
+
+<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-42.htm">Creating a project</a><br>
+<a href="tasks-44.htm">Creating a file</a><br>
+<a href="tasks-43.htm">Creating a folder</a><br>
+</P>
+
+<P>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
+</P>
+</BODY>
+</HTML>
