--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-55bg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-55bg.htm
@@ -1,1 +1,59 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Importing resources from a ZIP file</title></HEAD><BODY BGCOLOR="#ffffff"><h1>Importing resources from a ZIP file</h1><P>You can use the Import wizard to extract files from a ZIP file into the Workbench.</P><ol>  <li>From the main menu bar, select <b>File &gt; Import</b>. The Import wizard opens.</li>  <li>Select <b>ZIP file</b> and click <b>Next</b>.</li>  <li>Click the <b>Browse</b> button on the next page of the wizard, to select    the ZIP files that contain the files you want to extract and import into the    Workbench.</li>  <li>In the import selection panes, use the following methods to select exactly    the resources you want to add:    <ul>      <li>Expand the hierarchies in the left pane and select or        clear the checkboxes that represent the folders in the selected        directory. Then in the right pane, select or clear checkboxes for        individual files.</li>      <li>Click <b>Filter Types</b> to filter the current selection        for files of a specific type.</li>      <li>Click <b>Select All </b>to select all resources in the        directory, then go through and deselect the ones that you do not want to        add.</li>      <li>Click <b>Deselect All</b> to deselect all resources in        the directory, then go through and choose individual resources to add.</li>    </ul></li>  <li>Specify the Workbench project or folder that will be the import destination.</li>  <li>When you have finished specifying your import options. click <b>Finish.</b></li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-12.htm">Resources</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-70.htm">Import Wizard</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-importproject.htm">Importing existing projects</a><br><a href="tasks-55.htm">Importing resources from a directory in the file system</a><br><a href="tasks-57.htm">Exporting</a><br></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Importing resources from a ZIP file</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<h1>Importing resources from a ZIP file</h1>
+
+<P>You can use the Import wizard to extract files from a ZIP file into the Workbench.
+</P>
+
+<ol>
+  <li>From the main menu bar, select <b>File &gt; Import</b>. The Import wizard opens.</li>
+  <li>Select <b>ZIP file</b> and click <b>Next</b>.</li>
+  <li>Click the <b>Browse</b> button on the next page of the wizard, to select
+    the ZIP files that contain the files you want to extract and import into the
+    Workbench.</li>
+  <li>In the import selection panes, use the following methods to select exactly
+    the resources you want to add:
+    <ul>
+      <li>Expand the hierarchies in the left pane and select or
+        clear the checkboxes that represent the folders in the selected
+        directory. Then in the right pane, select or clear checkboxes for
+        individual files.</li>
+      <li>Click <b>Filter Types</b> to filter the current selection
+        for files of a specific type.</li>
+      <li>Click <b>Select All </b>to select all resources in the
+        directory, then go through and deselect the ones that you do not want to
+        add.</li>
+      <li>Click <b>Deselect All</b> to deselect all resources in
+        the directory, then go through and choose individual resources to add.</li>
+    </ul></li>
+  <li>Specify the Workbench project or folder that will be the import destination.</li>
+  <li>When you have finished specifying your import options. click <b>Finish.</b></li>
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-12.htm">Resources</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-70.htm">Import Wizard</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-importproject.htm">Importing existing projects</a><br>
+<a href="tasks-55.htm">Importing resources from a directory in the file system</a><br>
+<a href="tasks-57.htm">Exporting</a><br>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
