--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-87b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-87b.htm
@@ -1,1 +1,51 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Restoring deleted resources from local history</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Restoring deleted resources from the local history</H1><p>To restore a deleted Workbench resource with a state from the local history:</p><ol>  <li>In the Navigator view, select the folder or project into which you want to restore      a local history state.</li>  <li>From the resource's pop-up menu, select <b>Restore From Local History...</b>.  The Restore From Local History dialog opens showing all files that were previously contained  in the selected folder or project and all of their sub-folders.</li>  <li>Check the files that you want to restore</li>  <li>If you don't want to restore just the last state of a file you can   select any other state of the file from the <b>Local History</b> list on the right hand side  of the dialog. The bottom pane of the dialog shows the contents of the state.</li>  <li>If you are done with all files click <b>Restore</b>.</li></ol><P><em>Tip</em>: You can configure your Workbench preferences to specify how manydays to keep files, or how many entries per file you want to keep, or themaximum file size for files to be kept. Select <b>Window &gt; Preferences&gt; Workbench &gt; Local History</b>.</P><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-17a.htm">Local history</a><br><a href="../concepts/concepts-12.htm">Resources</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-70.htm">Comparing resources with the local history</a><br><a href="tasks-87.htm">Replacing resources with the local history</a><br><a href="tasks-88.htm">Setting local history preferences</a></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Restoring deleted resources from local history</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Restoring deleted resources from the local history</H1>
+
+<p>To restore a deleted Workbench resource with a state from the local history:
+</p>
+
+<ol>
+  <li>In the Navigator view, select the folder or project into which you want to restore  
+    a local history state.</li>
+  <li>From the resource's pop-up menu, select <b>Restore From Local History...</b>.
+  The Restore From Local History dialog opens showing all files that were previously contained
+  in the selected folder or project and all of their sub-folders.</li>
+  <li>Check the files that you want to restore</li>
+  <li>If you don't want to restore just the last state of a file you can 
+  select any other state of the file from the <b>Local History</b> list on the right hand side
+  of the dialog. The bottom pane of the dialog shows the contents of the state.</li>
+  <li>If you are done with all files click <b>Restore</b>.</li>
+</ol>
+
+<P><em>Tip</em>: You can configure your Workbench preferences to specify how many
+days to keep files, or how many entries per file you want to keep, or the
+maximum file size for files to be kept. Select <b>Window &gt; Preferences
+&gt; Workbench &gt; Local History</b>.
+</P>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-17a.htm">Local history</a><br>
+<a href="../concepts/concepts-12.htm">Resources</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-70.htm">Comparing resources with the local history</a><br>
+<a href="tasks-87.htm">Replacing resources with the local history</a><br>
+<a href="tasks-88.htm">Setting local history preferences</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
