--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
@@ -1,1 +1,84 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Creating a CVS repository location</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Creating a CVS repository location</H1><P><em>Prerequisite</em>: A CVS server must already be configured on the host machine to create avalid repository location in the Workbench.</P><P>To create a new repository location:</P><ol>  <li>Open the CVS Repositories View by selecting <b>Window &gt; Show View &gt;     Other...</b> on the main menu bar and then selecting <b>CVS &gt; CVS Repositories</b>     from the Show View dialog. Alternatively, the CVS Repositories view is also     shown in the CVS Repository Exploring perspective. </li>  <li>From the context menu of the CVS Repositories View, select <b>New &gt; Repository     Location</b>. The Add CVS Repository wizard opens.</li>  <li>Enter the information required to identify and connect to the repository     location:     <ol type="a">      <li>In the <b> Host </b> field, type the address of the host. (For example:         <samp>mymachine.com)</samp>. </li>      <li>In the <b> Repository path </b> field, type the path to the repository         on the host (for example <samp>/home/repo, d:/repo.)</samp></li>      <li>In the <b> User </b> field, type the user name under which you want         to connect to the repository. </li>      <li>In the <b>Password</b> field, type the password for the above user name.</li>      <li> From the <b> Connection Type</b> list, select the authentication protocol         of the CVS server.&nbsp; There are three connection methods that come         with the Eclipse CVS client:         <ul>          <li><b>pserver</b> - a CVS specific connection method.</li>          <li><b>extssh</b> - an SSH 1.0 client included with Eclipse</li>          <li><b>ext</b> - the CVS ext connection method which uses an external             tool such as SSH to connect to the repository. The tool used by ext             is configured in the <b>Team &gt; CVS &gt; EXT Connection Method</b>             preference page. </li>        </ul>      </li>      <li>If the host uses a custom port, enable <b>Use Port</b> and enter the         port number.</li>    </ol>  </li>  <li>(Optional) Select the <b>Validate connection on finish</b> if you want to     authenticate the specified user to the specified host when you close this     wizard. (If you do not select this option, the user name will be authenticated     later, when you try to access the contents of the repository.)</li>  <li> Click <b>Finish</b>. The repository location is created. </li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27c.htm">CVS Repositories</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-94.htm">Discarding a CVS repository location</a><br><a href="tasks-93.htm">Refreshing the CVS repositories view</a><br><a href="tasks-96.htm">Checking out a project from a CVS repository</a><br><a href="tasks-110.htm">Discovering branch and version tags</a><br><a href="tasks-95.htm">Changing the properties of a CVS Repository Location</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a><br><a href="../reference/ref-32.htm">CVS Repositories view</a></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Creating a CVS repository location</title>
+<meta name="keyword" content="team">
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1 CLASS="Head">Creating a CVS repository location</H1>
+
+<P><em>Prerequisite</em>: A CVS server must already be configured on the host machine to create a
+valid repository location in the Workbench.
+</P>
+
+<P>To create a new repository location:
+</P>
+
+<ol>
+  <li>Open the CVS Repositories View by selecting <b>Window &gt; Show View &gt; 
+    Other...</b> on the main menu bar and then selecting <b>CVS &gt; CVS Repositories</b> 
+    from the Show View dialog. Alternatively, the CVS Repositories view is also 
+    shown in the CVS Repository Exploring perspective. </li>
+  <li>From the context menu of the CVS Repositories View, select <b>New &gt; Repository 
+    Location</b>. The Add CVS Repository wizard opens.</li>
+  <li>Enter the information required to identify and connect to the repository 
+    location: 
+    <ol type="a">
+      <li>In the <b> Host </b> field, type the address of the host. (For example: 
+        <samp>mymachine.com)</samp>. </li>
+      <li>In the <b> Repository path </b> field, type the path to the repository 
+        on the host (for example <samp>/home/repo, d:/repo.)</samp></li>
+      <li>In the <b> User </b> field, type the user name under which you want 
+        to connect to the repository. </li>
+      <li>In the <b>Password</b> field, type the password for the above user name.</li>
+      <li> From the <b> Connection Type</b> list, select the authentication protocol 
+        of the CVS server.&nbsp; There are three connection methods that come 
+        with the Eclipse CVS client: 
+        <ul>
+          <li><b>pserver</b> - a CVS specific connection method.</li>
+          <li><b>extssh</b> - an SSH 1.0 client included with Eclipse</li>
+          <li><b>ext</b> - the CVS ext connection method which uses an external 
+            tool such as SSH to connect to the repository. The tool used by ext 
+            is configured in the <b>Team &gt; CVS &gt; EXT Connection Method</b> 
+            preference page. </li>
+        </ul>
+      </li>
+      <li>If the host uses a custom port, enable <b>Use Port</b> and enter the 
+        port number.</li>
+    </ol>
+  </li>
+  <li>(Optional) Select the <b>Validate connection on finish</b> if you want to 
+    authenticate the specified user to the specified host when you close this 
+    wizard. (If you do not select this option, the user name will be authenticated 
+    later, when you try to access the contents of the repository.)</li>
+  <li> Click <b>Finish</b>. The repository location is created. </li>
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
+<a href="../concepts/concepts-27c.htm">CVS Repositories</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-94.htm">Discarding a CVS repository location</a><br>
+<a href="tasks-93.htm">Refreshing the CVS repositories view</a><br>
+<a href="tasks-96.htm">Checking out a project from a CVS repository</a><br>
+<a href="tasks-110.htm">Discovering branch and version tags</a><br>
+<a href="tasks-95.htm">Changing the properties of a CVS Repository Location</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
+<a href="../reference/ref-47.htm">CVS</a><br>
+<a href="../reference/ref-32.htm">CVS Repositories view</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
