--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
@@ -1,1 +1,48 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Configuring perspectives</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Configuring perspectives</H1><p>In addition to configuring the layout of your perspective youcan also control several other key aspects of a perspective. These include:</p><ul>  <li>The options available on the <b>File &gt; New</b> submenu.</li>  <li>The options available on the <b> Window &gt; Open Perspective</b> submenu.</li>  <li>The options available on the <b> Window &gt; Show View</b> menu submenu.</li>  <li>Action sets (buttons and menu options) that show up on the toolbar and menu bar.</li></ul><p>To configure a perspective:</p><ol>  <li>Switch to the perspective that you want to configure.</li>  <li>Select <b>Window &gt; Customize Perspective</b>.</li>  <li>Expand the item that you want to customize.</li>  <li>Use the check boxes to select which elements you want to see    on drop-down menus in the selected perspective. Items you do not select will still be    accessible by clicking the <b>Other</b> menu option.</li>  <li>Click <b>OK</b>.</ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="../concepts/concepts-4.htm">Perspectives</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-24.htm">Changing where perspectives open</a><br><a href="tasks-31.htm">Specifying the default perspective</a><br><a href="tasks-9i.htm">Saving a user-defined perspective</a></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Configuring perspectives</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Configuring perspectives</H1>
+<p>In addition to configuring the layout of your perspective you
+can also control several other key aspects of a perspective. These include:
+</p>
+<ul>
+  <li>The options available on the <b>File &gt; New</b> submenu.</li>
+  <li>The options available on the <b> Window &gt; Open Perspective</b> submenu.</li>
+  <li>The options available on the <b> Window &gt; Show View</b> menu submenu.</li>
+  <li>Action sets (buttons and menu options) that show up on the toolbar and menu bar.</li>
+</ul>
+
+<p>To configure a perspective:</p>
+<ol>
+  <li>Switch to the perspective that you want to configure.</li>
+  <li>Select <b>Window &gt; Customize Perspective</b>.</li>
+  <li>Expand the item that you want to customize.</li>
+  <li>Use the check boxes to select which elements you want to see
+    on drop-down menus in the selected perspective. Items you do not select will still be
+    accessible by clicking the <b>Other</b> menu option.</li>
+  <li>Click <b>OK</b>.
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
+<a href="../concepts/concepts-4.htm">Perspectives</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-24.htm">Changing where perspectives open</a><br>
+<a href="tasks-31.htm">Specifying the default perspective</a><br>
+<a href="tasks-9i.htm">Saving a user-defined perspective</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
