--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-77.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-77.htm
@@ -1,1 +1,46 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Adding line items in the Tasks view</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Adding line items in the Tasks view</H1><P>The Tasks view contains line items for system-generated problems, warnings, anderrors. You can add your own entries to the table to build a listof to-do items, or tasks.</P><ol>  <li>On the toolbar in the Tasks view, click the <b>New Task</b> button      <img border="0" src="../images/Image52_new_task.jpg" alt="New Task button" width="23" height="20">.      The <b>New Task</b> dialog will open.</li>  <li>Type a brief description for the task in the <b>Description</b> field.       The new task is assigned default priority and completed values.       These values may also be modified within the <b>New Task</b> dialog.</li>  <li>Press <b>OK</b>.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/ctskview.htm">Tasks view</a><br><a href="../concepts/cbookmrk.htm">Bookmarks</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-78.htm">Deleting tasks</a><br><a href="tasks-77b.htm">Associating a task with an editable resource</a><br><a href="tasks-79.htm">Filtering the task list</a><br><a href="tasks-81b.htm">Creating a bookmark for an entire file</a><br><a href="tasks-81.htm">Creating a bookmark within a file</a></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Adding line items in the Tasks view</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Adding line items in the Tasks view</H1>
+
+<P>The Tasks view contains line items for system-generated problems, warnings, and
+errors. You can add your own entries to the table to build a list
+of to-do items, or tasks.
+</P>
+
+<ol>
+  <li>On the toolbar in the Tasks view, click the <b>New Task</b> button
+      <img border="0" src="../images/Image52_new_task.jpg" alt="New Task button" width="23" height="20">.
+      The <b>New Task</b> dialog will open.</li>
+  <li>Type a brief description for the task in the <b>Description</b> field. 
+      The new task is assigned default priority and completed values. 
+      These values may also be modified within the <b>New Task</b> dialog.</li>
+  <li>Press <b>OK</b>.</li>
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/ctskview.htm">Tasks view</a><br>
+<a href="../concepts/cbookmrk.htm">Bookmarks</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-78.htm">Deleting tasks</a><br>
+<a href="tasks-77b.htm">Associating a task with an editable resource</a><br>
+<a href="tasks-79.htm">Filtering the task list</a><br>
+<a href="tasks-81b.htm">Creating a bookmark for an entire file</a><br>
+<a href="tasks-81.htm">Creating a bookmark within a file</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src = "../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
